--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "eslint-plugin-react-hooks": "^2.0.1",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2"
+  },
+  "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
