--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Search ants species by country.",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
+    "format": "prettier \"src/**/*.{js,html}\" --write",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dimitri Marion",
