--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-paginate": "^6.3.0"
   },
   "browserslist": [
     "last 2 Chrome versions",
